# tiny-mem-gym

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
examples/: play_env_pygame.py  run_random_bandit.py  run_random_gridworld.py  run_random_sequence_recall.py
src/tiny_mem_gym/: __init__.py  drawing.py
src/tiny_mem_gym/envs/: __init__.py  dungeon.py  gridworld.py  hacking.py  memory_bandit.py  racer.py  sequence_recall.py
tests/: test_env_api.py  test_gridworld.py  test_memory_bandit.py  test_new_envs.py  test_sequence_recall.py
