[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-mem-gym"
version = "0.1.0"
description = "A tiny collection of Gymnasium-compatible environments focused on memory and partial observability."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Tiny Mem Gym Developers" }
]
dependencies = [
  "gymnasium>=0.27,<1.0",
  "numpy>=1.21,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
viz = [
  "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://example.com/tiny-mem-gym"
Repository = "https://example.com/tiny-mem-gym"


